--- a/css/content.css
+++ b/css/content.css
@@ -23,10 +23,10 @@
 .syllabi.content main section.menu-container h3{
 	background: #3C5D40;
 }
-/* .assessments.content header,
+.assessments.content header,
 .assessments.content main section.menu-container h3{
 	background: #60582F;
-} */
+}
 .about.content header,
 .about.content main section.menu-container h3{
 	background: #637474;
