--- a/css/style.css
+++ b/css/style.css
@@ -533,6 +533,7 @@ nav#fallback-nav li button{
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
+	margin-right: 1rem;
 	padding: 7px 8px 5px;
 	position: absolute;
 	top: 50%;
