--- a/css/style.css
+++ b/css/style.css
@@ -859,6 +859,7 @@ h4,
 section section h4:first-child{
 	font-weight: 600;
 	text-transform: uppercase;
+	letter-spacing: .02rem;
 	margin: 1rem 0;
 }
 @media only screen and (min-width: 480px){
