--- a/css/content.css
+++ b/css/content.css
@@ -428,7 +428,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 .content main .specs .specs-container a.mail:visited{
 	font-size: 1rem;
 	text-decoration: none;
-	padding: 0 3px;
+	padding: 0 0 0 3px;
 }
 /* container for "Contact" text (part of email hyperlink in "Production Details" section) */
 .content main .specs .specs-container a.mail span{
