--- a/css/cluster.css
+++ b/css/cluster.css
@@ -1,7 +1,6 @@
 /* This CSS file has been created by Adrian S. Wisnicki (2020-2023). For further information about the Undisciplining the Victorian Classroom (UVC) CSS files, see /css/style.css */
 /* This CSS file, like the ones from which it is adapted, is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). Please feel free to reuse the present code, but be sure to attribute it properly and publicly on your site.  */
 /* Cluster pages constitute the second level of the UVC site and consist of the gateway pages that provide access to individual Zoomcasts, lesson plans, syllabi, assignments, and various parts of the "About" section. At present, there are five such files: /html/about.html, /html/assignments.html, /html/lesson_plans.html, /html/syllabi.html, and /html/zoomcasts.html */
-/* For further information about the UVC CSS files, see /css/style.css. For further information about UVC files in general, see https://github.com/undiscipliningvc/undiscipliningvc.  */
 
 
 /* 1.2.2 Cluster Pages */
@@ -425,7 +424,7 @@
 /* See above for annotations of the relevant code below. */
 /* Adapted from  https://ppuzio.medium.com/flexbox-gap-workaround-for-safari-on-ios-14-13-and-lower-ffcae589eb69 and 
 https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Conditional_Rules/Using_Feature_Queries */
-/* Further developed from the original code created by One More Voice (https://github.com/livingstoneonline/onemorevoice/blob/master/css/style.css) */
+/* Further developed from the original code created by One More Voice (https://onemorevoice.org/) */
 @supports (-webkit-touch-callout: none) and (not (translate: none)){
 	.cluster main,
 	.cluster.zoomcasts main{
